--- a/html-css/Atividade/1 atividade/css/header.css
+++ b/html-css/Atividade/1 atividade/css/header.css
@@ -8,7 +8,7 @@ header{
     padding: 10px 20px;
     border-bottom: 7px solid #000;
     justify-content: space-between;
-   
+    position: fixed;
 }
 
 img{
@@ -26,7 +26,7 @@ nav{
  
 .oi::before{
     content: "";
-    background-color: #AB9E7E;
+    background-color: #a5a19a6b;
     width: 7px;
     height: 7px;
     margin-right: 10px;
