--- a/html-css/Atividade/2 atividade/css/box.css
+++ b/html-css/Atividade/2 atividade/css/box.css
@@ -1,13 +1,27 @@
-#box{
-    background-color: rgb(255, 255, 255);
+.box{
+    background-color:#665D33;
     border-radius: 15px;
-    height: 2000px;
-    width: 1000px;
-    padding: 20px; 
+    height: auto;
+    width: auto;
+    padding: 10px; 
     box-shadow: 5px 5px 15px rgb(172, 172, 172); 
     margin: 10px;
     float: left;
+    color: white;
 }
+
+.box1{
+    background-color:#665D33;
+    border-radius: 15px;
+    height: 110px;
+    width: 30%;
+    padding: 10px; 
+    box-shadow: 5px 5px 15px rgb(172, 172, 172); 
+    margin: 10px;
+    float: right;
+    color: white;
+}
+
 
 
 
