--- a/html-css/Atividade/2 atividade/css/box.css
+++ b/html-css/Atividade/2 atividade/css/box.css
@@ -1,8 +1,20 @@
 .box{
     background-color:#665D33;
-    border-radius: 15px;
+    border-radius: 5px;
     height: auto;
     width: auto;
+    padding: 10px; 
+    box-shadow: 5px 5px 15px rgb(172, 172, 172); 
+    margin: 10px;
+    float: left;
+    color: rgb(240, 235, 235);
+}
+
+.box12{
+    background-color:#E87133;
+    border-radius: 5px;
+    height: auto;
+    width: 70%;
     padding: 10px; 
     box-shadow: 5px 5px 15px rgb(172, 172, 172); 
     margin: 10px;
@@ -12,9 +24,9 @@
 
 .box1{
     background-color:#665D33;
-    border-radius: 15px;
-    height: 110px;
-    width: 30%;
+    border-radius: 5px;
+    height: auto;
+    width: 23%;
     padding: 10px; 
     box-shadow: 5px 5px 15px rgb(172, 172, 172); 
     margin: 10px;
@@ -22,6 +34,47 @@
     color: white;
 }
 
+.box2{
+    background-color:#ffffff;
+    border-radius: 3px;
+    height: 130px;
+    width: 130px;
+    padding: 10px;  
+    margin: 10px;
+    float: left;
+    color: white;
+    transition: transform 150ms linear;
+}
+
+.box2:hover{
+    transform: scale(1.08);
+    opacity: 1;
+}
+
+
+.menuz{
+    position: absolute;
+    box-shadow: 2 2 2px black;
+    display: none;
+}
+
+.menuz a{
+    display: block; 
+    padding-top:  5px;
+    margin-bottom: 15px;
+    color: rgb(255, 255, 255);
+    background-color: #000000;
+    width: 20px;
+    height: 15px;
+
+}
+
+.men1:hover .menuz{
+    padding: 10px;
+    display: block;  
+    background-color: #000000; 
+}
+ 
 
 
 
