--- a/javascript/Dom/atividade/atividade 1/style.css
+++ b/javascript/Dom/atividade/atividade 1/style.css
@@ -22,7 +22,7 @@ h2 {
 
 input[type="text"],
 input[type="email"],
-input[type="idade"],
+input[type="number"],
 input[type="estado"],
 input[type="submit"] {
     width: 100%;
